--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <body>
         <div id="error" hidden="hidden"></div>
         <div id="container">
-            <canvas id="glCanvas"></canvas>
+            <canvas id="playground"></canvas>
         </div>
 
         <script type="module" src="./src/main.js">
